@@ -1,3 +1,5 @@
+* Require fresh session to post a statement
+
 Version 5.2.0 - 2019-05-06
 * Bug fixes (see mercurial logs for details)
 * Use invoice amount to pay as line amount when creating lines from origins
